--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: bifrost_wireless_api
 description: A Flutter package to control the intelbras CPEs that contain the bifrost api embedded.
-version: 0.0.1
+version: 0.0.3
 homepage: https://github.com/timmaiaaac/bifrost_wireless_api
 
 environment:
@@ -13,6 +13,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_pw_validator: ^1.6.0
+  event_bus_plus: ^0.6.1
 
 dev_dependencies:
   flutter_test:
